...

    <string name="downloadErrorMsg">Please ensure an active Internet connection during the entire download process. In case the progress bar is stalled, kindly restart the app or try again</string>
    <string name="intro_to_jellow">Introduction to Jellow</string>
    <string name="rate_jellow">Kindly rate Jellow in all fields.</string>
    <string name="keyboard">Keyboard</string>
    <string name="user_country_code" translatable="false">com.dsource.idc.jellow.user_country_code</string>
    <string name="txt_intro1_central9btn">Jellow has 9 central category buttons</string>
    <string name="txt_intro1_categorybtn">Category buttons</string>
    <string name="txt_intro5_jellowUsageDesc">The application also has 6 expressive side buttons</string>
    <string name="txt_intro5_expressiveBtn">Expressive buttons</string>
    <string name="txt_intro2_appUsageDesc">The user first clicks on a category button and then on an expressive button</string>
    <string name="txt_intro2_speakUsingJellow">Speaking using Jellow</string>
    <string name="txt_intro3_level2CatDesc">By double-clicking on a category button, user can access further categories and sub-categories</string>
    <string name="txt_intro3_navWithJellow">Navigating within Jellow</string>
    <string name="txt_intro4_customizeAppDesc">User can customize application settings by clicking on top right corner of the application</string>
    <string name="txt_intro4_customizeJellow">Settings within Jellow</string>
    <string name="txt_intro7_getStartedDesc">Now you are ready to get started with Jellow</string>
    <string name="txt_intro7_getStarted">GET STARTED</string>
    <string name="completed_intro" translatable="false">com.dsource.idc.jellow.completed_intro</string>
    <string name="last_session_created" translatable="false">com.dsource.idc.jellow.last_session_created</string>
    <string name="enable_calling" translatable="false">com.dsource.idc.jellow.enable_calling</string>
    <string name="string_msg" translatable="false">com.dsource.idc.jellow.string_message</string>
    <string name="last_crash_reported" translatable="false">com.dsource.idc.jellow.last_crash_reported</string>
...
