<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:tag="small">
    <ImageView
        android:id="@+id/btnMoveLeft"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:onClick="changeDemoScreen"
        android:layout_gravity="start"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:src="@drawable/ic_chevron_left"
        tools:ignore="RtlSymmetry"
        android:contentDescription="@string/previous_slide" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scrollbarFadeDuration="0"
        android:layout_marginRight="2dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_intro8_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_intro8_txtTitle"
                style="@style/defaultTextViewStyle"
                android:textSize="11sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/tv_intro8_imgTxt1"
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        style="@style/defaultTextViewStyle"
                        android:textAlignment="center"
                        android:minLines="2"
                        android:textSize="11sp"
                        android:text="@string/txt_intro8_step1"/>
                    <ImageView
                        android:id="@+id/img1_intro8"
                        android:layout_width="120dp"
                        android:layout_height="135dp"
                        android:layout_marginTop="-8dp"
                        android:contentDescription="@string/lang_setting_option1_cd" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">
                    <TextView
                        android:id="@+id/tv_intro8_imgTxt2"
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        style="@style/defaultTextViewStyle"
                        android:textAlignment="center"
                        android:minLines="2"
                        android:textSize="11sp"
                        android:text="@string/txt_intro8_step2"/>
                    <ImageView
                        android:id="@+id/img2_intro8"
                        android:layout_width="120dp"
                        android:layout_height="135dp"
                        android:layout_marginTop="-8dp"
                        android:contentDescription="@string/lang_setting_option2_cd" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:id="@+id/tv_intro8_imgTxt3"
                        android:layout_width="175dp"
                        android:layout_height="wrap_content"
                        style="@style/defaultTextViewStyle"
                        android:textAlignment="center"
                        android:minLines="2"
                        android:textSize="11sp"
                        android:text="@string/txt_intro8_step3"/>
                    <ImageView
                        android:id="@+id/img3_intro8"
                        android:layout_width="120dp"
                        android:layout_height="135dp"
                        android:layout_marginTop="-8dp"
                        android:contentDescription="@string/lang_setting_option3_cd"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/btnTTsSetting"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="13sp"
                android:layout_gravity="center_horizontal"
                android:onClick="openedTTsSetting"
                android:text="@string/txt_tts_stting"/>
            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="168dp"
                android:importantForAccessibility="no"/>
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/btnMoveRight"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:onClick="changeDemoScreen"
        android:layout_gravity="end"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:src="@drawable/ic_chevron_right"
        tools:ignore="RtlSymmetry"
        android:contentDescription="@string/next_slide" />
</FrameLayout>