...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_intro_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/defaultTextViewStyle"
            android:paddingLeft="32dp"
...
