package com.dsource.idc.jellowintl;

import androidx.test.rule.ActivityTestRule;

//@RunWith(AndroidJUnit4.class)
//@LargeTest
//@FixMethodOrder(MethodSorters.NAME_ASCENDING)
public class _24_Intro {
    //@Rule
    public ActivityTestRule<KeyboardInputActivity> activityRule =
            new ActivityTestRule<>(KeyboardInputActivity.class);

    /*@BeforeClass
    public static void setup(){
        getSession().setCaregiverNumber("9653238072");
        getSession().setLanguage(ENG_IN);
        getSession().setDownloaded(ENG_IN);
    }*/

    /*@Test
    public void _01_validateSlideTitles(){
        activityRule.getActivity().startActivity(new Intent(activityRule.getActivity(),
                Intro.class));
        onView(withId(R.id.tv_intro_title)).check(matches(withText(R.string.txt_intro1_central9btn)));
        onView(withId(R.id.intro_img)).perform(swipeLeft());
        onView(withId(R.id.tv_intro5_title)).check(matches(withText(R.string.txt_intro5_jellowUsageDesc)));
        onView(withId(R.id.intro5_img)).perform(swipeLeft());
        onView(withId(R.id.tv_intro2_title)).check(matches(withText(R.string.txt_intro2_appUsageDesc)));
        onView(withId(R.id.intro2_img)).perform(swipeLeft());
        onView(withId(R.id.tv_intro3_title)).check(matches(withText(R.string.txt_intro3_level2CatDesc)));
        onView(withId(R.id.intro3_img)).perform(swipeLeft());
        onView(withId(R.id.tv_intro4_title)).check(matches(withText(R.string.txt_intro4_customizeAppDesc)));
        onView(withId(R.id.intro4_img)).perform(swipeLeft());
        onView(withId(R.id.tv_intro8_title)).check(matches(withText(R.string.txt_intro8_txtTitle)));
        onView(withId(R.id.img2_intro8)).perform(swipeLeft());
        onView(withId(R.id.intro7_tvtop)).check(matches(withText(R.string.txt_intro7_getStartedDesc)));
    }*/
}
